# FlowCap

./: FlowCap_1.0.0_x64_en-US.msi  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CanvasPreview.tsx  Countdown.tsx  ExportPanel.tsx  RecordingBar.tsx  SetupPanel.tsx  SourcePicker.tsx  Studio.tsx  TrimEditor.tsx
src/hooks/: useCameraCapture.ts  useCanvasRecorder.ts  useCursorTracking.ts  useCursorZoom.ts  useScreenCapture.ts
src/types/: index.ts
src/utils/: canvasCompositor.ts  videoExport.ts
